fix text overflow

--- a/src/components/messenger/Messenger.module.scss
+++ b/src/components/messenger/Messenger.module.scss
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  overflow: hidden;
   height: 100%;
 
   .convoList {
@@ -9,6 +10,7 @@
   }
 
   .convoView {
+    overflow: hidden;
     flex: 1 1 auto;
   }
 }
